--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<style>
 			body {
 				text-align: center;
-				font-size: 11.8pt;
+				font-size: 14pt;
 				display: table-cell;
 				font-family: 'Segoe UI';
 				vertical-align: middle;
@@ -21,67 +21,49 @@
 		</style>
 	</head>
 	<body>
-		
-		<section class="block-content">
-			<input id="searchbox" placeholder="Search: | !d | !t | !l | !a | !e | !r | !i | !u | !y" type="text" autofocus="autofocus" autocomplete="on"></input>
-		</section>
-
-		<section class="block-content">
-			<ul>
-				<li>Misc</li>
-				<li><a href="https://github.com/xjxckk/stpg">1</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">2</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">3</a></li>
-			</ul>
-			<ul>
-				<li>Mail</li>
-				<li><a href="https://github.com/xjxckk/stpg">1</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">2</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">3</a></li>
-			</ul>
-			<ul>
-				<li>Work</li>
-				<li><a href="https://github.com/xjxckk/stpg">1</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">2</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">3</a></li>
-			</ul>
-			<ul>
-				<li>Network</li>
-				<li><a href="https://github.com/xjxckk/stpg">1</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">2</a></li>
-				<li><a href="https://github.com/xjxckk/stpg">3</a></li>
-			</ul>
-		</section>
-		
-		<div class="Notes">
-			<b style="text-align: left; margin-left: 4px">To do:</b>
-			<div id="Note" style="overflow: hidden">
-				<iframe id="NotesFrame" frameborder="0" border="0" cellspacing="0" marginheight="0" marginwidth="0" src="https://app.standardnotes.org/"></iframe>
+		<a href="https://github.com/xjxckk/stpg">
+			<div class="Notes">
+				<div class="Note">
+					<p class="Title">/stpg/</p>
+					<p>Startpage.</p>
+				</div>
 			</div>
-		</div>
+		</a>
 		
-		<div class="Notes">
-			<div class="Note" contenteditable="true" onkeyup="storeUsernote(this.id);"></div>
-		</div>
-			
-		<script>
-			getUsernote();
-		</script>
+		<a href="https://github.com/xjxckk/Spicetify">
+			<div class="Notes">
+				<div class="Note">
+					<p class="Title">Spicetify</p>
+					<p>Spicetify (Spotify mod) theme.</p>
+				</div>
+			</div>
+		</a>
 		
-		<div class="Notes">
-			<div class="Note" contenteditable="true" onkeyup="storeUsernote1(this.id);"></div>
-		</div>
+		<a href="https://github.com/xjxckk/pm">
+			<div class="Notes">
+				<div class="Note">
+					<p class="Title">/pm/</p>
+					<p>ProtonMail Theme.</p>
+				</div>
+			</div>
+		</a>
 		
-		<script>
-			getUsernote1();
-		</script>
+		<a href="https://github.com/xjxckk/IMDb-to-NOW-TV">
+			<div class="Notes">
+				<div class="Note">
+					<p class="Title">IMDb to NOW TV</p>
+					<p>Your IMDb watchlist filtered for NOW TV availability.</p>
+				</div>
+			</div>
+		</a>
 
-		<div class="Notes" style="margin: 0 auto 5px">
-			<div class="Note" contenteditable="true" onkeyup="storeUsernote2(this.id);"></div>
-		</div>
-
-		<script>
-			getUsernote2();
-		</script>
+		<a href="https://github.com/xjxckk/Auto-accept-Steam-friends">
+			<div class="Notes">
+				<div class="Note">
+					<p class="Title">Auto accept Steam friends</p>
+					<p>Automatically accept Steam friend requests and optionally send them a message.</p>
+				</div>
+			</div>
+		</a>
 	</body>
 </html>
