--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Startpage</title>
+		<title>/portfolio/</title>
 		<link rel="icon" type="image/png" href="images/favicon.png">
 		<link rel="stylesheet" href="css/main.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
