--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>/portfolio/</title>
 		<link rel="icon" type="image/png" href="images/favicon.png">
-		<link rel="stylesheet" href="css/main.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
-		<script src="js/notes.js"></script>
-		<script src="js/search.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="css/style.css">
 		<style>
 			body {
 				text-align: center;
@@ -17,53 +13,64 @@
 				font-family: 'Segoe UI';
 				vertical-align: middle;
 				background-image: url("images/bg.jpg");
-			}
+				}
 		</style>
 	</head>
 	<body>
-		<a href="https://github.com/xjxckk/stpg">
-			<div class="Notes">
-				<div class="Note">
-					<p class="Title">/stpg/</p>
-					<p>Startpage.</p>
+		<div id="container">
+			<a href="https://github.com/xjxckk/stpg">
+				<div class="notes">
+					<div class="note">
+						<p class="title">/stpg/</p>
+						<p>Startpage.</p>
+					</div>
 				</div>
-			</div>
-		</a>
-		
-		<a href="https://github.com/xjxckk/Spicetify">
-			<div class="Notes">
-				<div class="Note">
-					<p class="Title">Spicetify</p>
-					<p>Spicetify (Spotify mod) theme.</p>
+			</a>
+			
+			<a href="https://github.com/xjxckk/selenium_shortcuts">
+				<div class="notes">
+					<div class="note">
+						<p class="title">selenium_shortcuts</p>
+						<p>Shortcuts for Python Selenium.</p>
+					</div>
 				</div>
-			</div>
-		</a>
-		
-		<a href="https://github.com/xjxckk/pm">
-			<div class="Notes">
-				<div class="Note">
-					<p class="Title">/pm/</p>
-					<p>ProtonMail Theme.</p>
+			</a>
+			
+			<a href="https://github.com/xjxckk/Naster">
+				<div class="notes">
+					<div class="note">
+						<p class="title">Naster</p>
+						<p>Dark Deluge 2.0 theme derived from Mantis.</p>
+					</div>
 				</div>
-			</div>
-		</a>
-		
-		<a href="https://github.com/xjxckk/IMDb-to-NOW-TV">
-			<div class="Notes">
-				<div class="Note">
-					<p class="Title">IMDb to NOW TV</p>
-					<p>Your IMDb watchlist filtered for NOW TV availability.</p>
+			</a>
+			
+			<a href="https://github.com/xjxckk/printr">
+				<div class="notes">
+					<div class="note">
+						<p class="title">printr</p>
+						<p>Python print with formatting.</p>
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
 
-		<a href="https://github.com/xjxckk/Auto-accept-Steam-friends">
-			<div class="Notes">
-				<div class="Note">
-					<p class="Title">Auto accept Steam friends</p>
-					<p>Automatically accept Steam friend requests and optionally send them a message.</p>
+			<a href="https://github.com/xjxckk/error-alerts">
+				<div class="notes">
+					<div class="note">
+						<p class="title">error-alerts</p>
+						<p>Python error alerts via Telegram</p>
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
+
+			<a href="https://github.com/xjxckk/python-timeout">
+				<div class="notes">
+					<div class="note">
+						<p class="title">python-timeout</p>
+						<p>Random timeout between minimum and maximum values</p>
+					</div>
+				</div>
+			</a>
+		</div>
 	</body>
 </html>
